- From now on set to activity front page until get solution to above
- No sidebar so get rid
- Change default font being used
- Don't put max-width on body put on wrapper for responsive
- Call it site-wrapper to be more semantic
- Remove padder classes as we can do in divs better to control on responsive
- Get rid of 1% padding on nav, content and padder won't be using - easier to control for multiple devices
- Make header fit to design
- Make full width front page
- Remove site-wrapper create section wrappers
- Better default link colour
- Keep normlising in normalise.css not in status-main.css
- Remove any 1% paddings put on each element as style for ease
- Just set max-width on img for ease
- Remove content-wrap and use container as the wrapper for content section
- Create a content-profile that uses a sidebar and also not full width content
- Comment out the navigation on the activity stream for now until decide if using

03/12/2011 tam eve:
- Changelog updated
- Linked in modernizr as wasn't being called correctly
- Found bug on textarea not resizing - needs fix
- Changed buttons to all use same link colour for simplicity
- Sidebar shouldn't be an aside those are in sidebars not entire sidebar
- Basic profile page layout
- Added basic comment styling in

05/12/11 hnla:
- Added Status script file + enqueueing 
- Modified dynamic cache bust to check file extension & add correct path css/scripts
- Corrected? 'What's new textarea' BP keeps textarea short using 'height: 20px'
- Removed overflow: hidden for 'what's-new-textarea' replaced with 'clearfix' n.b can be reverted
- Added 'clear: both' to '.activity-entry', '.activity-comment' n.b can be reverted

05/12/11 tam
- Merged CSS as per discussion
- Added in fix for favourites
- First wave of icons which only show on hover for now until get feedback
- Changed some bold fonts and font sizes to give the activity posts bit more impact