@@ -82,13 +82,17 @@ nav ul, .looplist, .item-list-tabs ul {
 ------------------------------------------------------------------------------*/
 /** Generic - site-wide **/
 
-#container {
+#content-wrapper{
 	margin: 0 auto;
 	max-width: 1250px;
 	overflow: hidden;
- width: 96%; 	/* personally I like to keep a distance from viewport? */ 
 }
-#container, #header-wrapper, #friends-wrapper,
+.home #content-wrapper{
+	margin: 0 auto;
+	max-width: 550px;
+	overflow: hidden;
+}
+#content-wrapper, #header-wrapper, #friends-wrapper,
 #widgets-wrapper, #footer-wrapper {
 	overflow: hidden;
 }
@@ -99,6 +103,9 @@ nav ul, .looplist, .item-list-tabs ul {
 #content-profile {
 	float: left;
 	width: 78%;
+}
+#content-home{
+	margin: 0;
 }
 footer {clear: both;}
 
@@ -271,9 +278,13 @@ footer {
 	overflow: hidden;
 	padding: 10px;
 }
+
+.activity-entry:hover{
+	background: #fffef2;
+}
 .activity-avatar, .acomment-avatar{
 	float: left;
-	margin: 0 20px 20px 0;
+	margin: 0 20px 0 0;
 }
 .activity-avatar img{
 	border: 3px solid #eeeeee;
@@ -288,6 +299,7 @@ ul#activity-stream{
 .activity-meta{
 	font-size: 0.9em;
 }
+
 .activity-header{
 	font-size: 0.9em;
 	font-weight: bold;
