@@ -25,7 +25,7 @@
 
 	<div class="activity-content">
 		<div class="activity-header">
-			<?php bp_activity_action(); ?>
+			<?php global $activities_template; echo  $activities_template->activity->action; ?>
 		</div>
 		<?php if ( 'activity_comment' == bp_get_activity_type() ) : ?>
 			<div class="activity-inreplyto">
@@ -46,7 +46,7 @@
 		<?php if ( is_user_logged_in() ) : ?>
 
 			<div class="activity-meta">
-
+<?php echo bp_core_time_since( bp_get_activity_date_recorded() ) ?> ago
 				<?php if ( bp_activity_can_comment() ) : ?>
 
 					<a href="<?php bp_get_activity_comment_link(); ?>" class="button acomment-reply bp-primary-action" id="acomment-comment-<?php bp_activity_id(); ?>"><?php printf( __( 'Comment <span>%s</span>', 'buddypress' ), bp_activity_get_comment_count() ); ?></a>
