@@ -9,8 +9,8 @@
 
 ?>
 
-<?php get_header( 'status' ); ?>
-
+<?php get_header(); ?>
+<div id="content-wrapper">
 	<?php do_action( 'bp_before_directory_activity_page' ); ?>
 	<div id="content" role="main">
 
@@ -147,4 +147,4 @@
 
 	</div><!-- / #content -->
 	<?php do_action( 'bp_after_directory_activity_page' ); ?>
-<?php get_footer( 'buddypress' ); ?>
+<?php get_footer(); ?></div>
