@@ -29,38 +29,10 @@
 	<body <?php body_class() ?> id="status-default">
 		<?php do_action( 'bp_before_header' ) ?>
 
-		<div id="header-wrapper">
-			<header>
-				<div id="branding" role="banner">
-					<h1 id="logo"><a href="<?php echo home_url(); ?>" title="<?php _ex( 'Home', 'Home page banner link title', 'buddypress' ); ?>"><?php bp_site_name(); ?></a></h1>
-				</div>
-				<nav id="primary-navigation" role="navigation">
-					<?php wp_nav_menu( array( 'container' => false, 'menu_id' => 'nav', 'theme_location' => 'primary', 'fallback_cb' => 'bp_dtheme_main_nav' ) ); ?>
-				</nav>
-				<?php do_action( 'bp_header' ) ?>
-			</header>
-		</div>
+		
 
 		<?php do_action( 'bp_after_header' ) ?>
 		<?php do_action( 'bp_before_container' ) ?>
 		
-		<div id="container">
+		<div id="content-wrapper">
 		
-	<?php
-	// header serach bar elements removed until known what to do with
-	
-	if(1 > 2 )	{?>
-							<form action="<?php echo bp_search_form_action() ?>" method="post" id="search-form">
-							<label for="search-terms" class="accessibly-hidden"><?php _e( 'Search for:', 'buddypress' ); ?></label>
-							<input type="text" id="search-terms" name="search-terms" value="<?php echo isset( $_REQUEST['s'] ) ? esc_attr( $_REQUEST['s'] ) : ''; ?>" />
-
-							<?php echo bp_search_form_type_select() ?>
-
-							<input type="submit" name="search-submit" id="search-submit" value="<?php _e( 'Search', 'buddypress' ) ?>" />
-
-							<?php wp_nonce_field( 'bp_search_form' ) ?>
-
-						</form><!-- #search-form -->
-
-				<?php do_action( 'bp_search_login_bar' ) ?>
-<?php	}?>
