@@ -10,7 +10,6 @@
 ?>
 
 <?php get_header( 'buddypress' ); ?>
-
 	<?php do_action( 'bp_before_directory_members_page' ); ?>
 
 	<div id="content-profile">
